fixed: tooltip placement inconjunction with consumer layout z-index

--- a/core/src/Infotip/Infotip.less
+++ b/core/src/Infotip/Infotip.less
@@ -5,6 +5,7 @@
   cursor: help;
   position: relative;
   font-size: 14px;
+  z-index: 100; // place above app stack
 
   .tipIcon {
     color: @zesty-tab-blue;
